test_programs/compile_failure/restricted_bit_sizes/src/main.nr
use dep::std::assert_constant;

fn main() -> pub u63 {
    5
}
